--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "flowbite-react": "^0.6.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-tailwindcss-datepicker": "^1.6.6",
     "sweetalert2": "^11.7.32",
     "web-vitals": "^2.1.4"
-    },
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
