--- a/package.json
+++ b/package.json
@@ -10,15 +10,20 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
+    "cheerio": "^1.0.0-rc.12",
+    "date-fns": "^2.30.0",
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.6.4",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-datepicker": "^4.21.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-tailwindcss-datepicker": "^1.6.6",
     "sweetalert2": "^11.7.32",
+    "trix": "^2.0.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
