--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.5.1",
     "cheerio": "^1.0.0-rc.12",
     "date-fns": "^2.30.0",
+    "file-saver": "^2.0.5",
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.6.4",
     "moment": "^2.29.4",
