--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.16.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-tailwindcss-datepicker": "^1.6.6",
     "sweetalert2": "^11.7.32",
     "trix": "^2.0.7",
